Turning Our Model Training Code into a Script

--- a/05_PyTorch_Going_Modular.ipynb
+++ b/05_PyTorch_Going_Modular.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONWbAj1QcB08d4jhhWnbmA",
+      "authorship_tag": "ABX9TyNcurC6VUztw8wJYBDcRqSB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -282,10 +282,414 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 3. Making a model (TinyVGG) with a script (`model_builder.py`)\n",
+        "\n",
+        "Let's turn our model building code into a Python script we can import."
+      ],
+      "metadata": {
+        "id": "a7neN7Kd0qC8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile going_modular/model_builder.py\n",
+        "\n",
+        "\"\"\"\n",
+        "Contains PyTorch model code for a TinyVGG.\n",
+        "\n",
+        "\"\"\"\n",
+        "import torch\n",
+        "from torch import nn\n",
+        "\n",
+        "\n",
+        "class TinyVGG(nn.Module):\n",
+        "  \"\"\"\n",
+        "  Model VGG architecture from CNN Explainer\n",
+        "  \"\"\"\n",
+        "  def __init__(self,\n",
+        "               input_shape:int,\n",
+        "               hidden_units:int,\n",
+        "               output_shape:int)->None:\n",
+        "    super().__init__()\n",
+        "    self.conv_block_1 = nn.Sequential(\n",
+        "        nn.Conv2d(in_channels=input_shape,\n",
+        "                  out_channels=hidden_units,\n",
+        "                  kernel_size=3,\n",
+        "                  stride = 1,\n",
+        "                  padding=0), # (3,3) window\n",
+        "        nn.ReLU(),\n",
+        "        nn.Conv2d(in_channels=hidden_units,\n",
+        "                  out_channels = hidden_units,\n",
+        "                  kernel_size=3,\n",
+        "                  stride=1,\n",
+        "                  padding=0),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(kernel_size=2,\n",
+        "                     stride=2) # default stride value is same as kernel\n",
+        "    )\n",
+        "    self.conv_block_2 = nn.Sequential(\n",
+        "        nn.Conv2d(in_channels=hidden_units,\n",
+        "                  out_channels=hidden_units,\n",
+        "                  kernel_size=3,\n",
+        "                  stride = 1,\n",
+        "                  padding=0), # (3,3) window\n",
+        "        nn.ReLU(),\n",
+        "        nn.Conv2d(in_channels=hidden_units,\n",
+        "                  out_channels = hidden_units,\n",
+        "                  kernel_size=3,\n",
+        "                  stride=1,\n",
+        "                  padding=0),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(kernel_size=2,\n",
+        "                     stride=2) # default stride value is same as kernel\n",
+        "    )\n",
+        "    self.classifier = nn.Sequential(\n",
+        "        nn.Flatten(),\n",
+        "        nn.Linear(in_features = hidden_units*13*13, # the shape after the Flatten\n",
+        "                  out_features = output_shape)\n",
+        "    )\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    x = self.conv_block_1(x)\n",
+        "    # print(x.shape)\n",
+        "    x = self.conv_block_2(x)\n",
+        "    # print(x.shape)\n",
+        "    x = self.classifier(x)\n",
+        "    # print(x.shape)\n",
+        "    return x\n",
+        "    # return self.classifier(self.conv_block_2(self.conv_block_1(x))) # benefits from operator fusion (https://horace.io/brrr_intro.html)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hHhdp8Rn1sSc",
+        "outputId": "28a89a09-e65d-4ea4-cf33-c46fbdce171c"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting going_modular/model_builder.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "from going_modular import model_builder"
+      ],
+      "metadata": {
+        "id": "KSXA1cDW21rF"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "\n",
+        "from going_modular import model_builder\n",
+        "\n",
+        "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+        "\n",
+        "# Instantiate a model from the model_builder.py script\n",
+        "torch.manual_seed(42)\n",
+        "model_1 = model_builder.TinyVGG(input_shape = 3,\n",
+        "                                hidden_units = 10,\n",
+        "                                output_shape = len(class_names)).to(device)\n",
+        "model_1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "58N51Ctp11rQ",
+        "outputId": "7b6adaef-d0ce-41af-ca0e-a25adf30f295"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TinyVGG(\n",
+              "  (conv_block_1): Sequential(\n",
+              "    (0): Conv2d(3, 10, kernel_size=(3, 3), stride=(1, 1))\n",
+              "    (1): ReLU()\n",
+              "    (2): Conv2d(10, 10, kernel_size=(3, 3), stride=(1, 1))\n",
+              "    (3): ReLU()\n",
+              "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "  )\n",
+              "  (conv_block_2): Sequential(\n",
+              "    (0): Conv2d(10, 10, kernel_size=(3, 3), stride=(1, 1))\n",
+              "    (1): ReLU()\n",
+              "    (2): Conv2d(10, 10, kernel_size=(3, 3), stride=(1, 1))\n",
+              "    (3): ReLU()\n",
+              "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "  )\n",
+              "  (classifier): Sequential(\n",
+              "    (0): Flatten(start_dim=1, end_dim=-1)\n",
+              "    (1): Linear(in_features=1690, out_features=3, bias=True)\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. Creating train_step() and test_step() functions and train() to combine them\n",
+        "\n",
+        "They will be saved in a file called `engine.py`"
+      ],
+      "metadata": {
+        "id": "0kXeoYP63F2S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile going_modular/engine.py\n",
+        "\"\"\"\n",
+        "Contains functions for training and testing a PyTorch model.\n",
+        "\"\"\"\n",
+        "import torch\n",
+        "\n",
+        "from tqdm.auto import tqdm\n",
+        "from typing import Dict, List, Tuple\n",
+        "\n",
+        "def train_step(model: torch.nn.Module,\n",
+        "               dataloader: torch.utils.data.DataLoader,\n",
+        "               loss_fn: torch.nn.Module,\n",
+        "               optimizer: torch.optim.Optimizer,\n",
+        "               device: torch.device) -> Tuple[float, float]:\n",
+        "  \"\"\"Trains a PyTorch model for a single epoch.\n",
+        "\n",
+        "  Turns a target PyTorch model to training mode and then\n",
+        "  runs through all of the required training steps (forward\n",
+        "  pass, loss calculation, optimizer step).\n",
+        "\n",
+        "  Args:\n",
+        "    model: A PyTorch model to be trained.\n",
+        "    dataloader: A DataLoader instance for the model to be trained on.\n",
+        "    loss_fn: A PyTorch loss function to minimize.\n",
+        "    optimizer: A PyTorch optimizer to help minimize the loss function.\n",
+        "    device: A target device to compute on (e.g. \"cuda\" or \"cpu\").\n",
+        "\n",
+        "  Returns:\n",
+        "    A tuple of training loss and training accuracy metrics.\n",
+        "    In the form (train_loss, train_accuracy). For example:\n",
+        "\n",
+        "    (0.1112, 0.8743)\n",
+        "  \"\"\"\n",
+        "  # Put model in train mode\n",
+        "  model.train()\n",
+        "\n",
+        "  # Setup train loss and train accuracy values\n",
+        "  train_loss, train_acc = 0, 0\n",
+        "\n",
+        "  # Loop through data loader data batches\n",
+        "  for batch, (X, y) in enumerate(dataloader):\n",
+        "      # Send data to target device\n",
+        "      X, y = X.to(device), y.to(device)\n",
+        "\n",
+        "      # 1. Forward pass\n",
+        "      y_pred = model(X)\n",
+        "\n",
+        "      # 2. Calculate  and accumulate loss\n",
+        "      loss = loss_fn(y_pred, y)\n",
+        "      train_loss += loss.item()\n",
+        "\n",
+        "      # 3. Optimizer zero grad\n",
+        "      optimizer.zero_grad()\n",
+        "\n",
+        "      # 4. Loss backward\n",
+        "      loss.backward()\n",
+        "\n",
+        "      # 5. Optimizer step\n",
+        "      optimizer.step()\n",
+        "\n",
+        "      # Calculate and accumulate accuracy metric across all batches\n",
+        "      y_pred_class = torch.argmax(torch.softmax(y_pred, dim=1), dim=1)\n",
+        "      train_acc += (y_pred_class == y).sum().item()/len(y_pred)\n",
+        "\n",
+        "  # Adjust metrics to get average loss and accuracy per batch\n",
+        "  train_loss = train_loss / len(dataloader)\n",
+        "  train_acc = train_acc / len(dataloader)\n",
+        "  return train_loss, train_acc\n",
+        "\n",
+        "def test_step(model: torch.nn.Module,\n",
+        "              dataloader: torch.utils.data.DataLoader,\n",
+        "              loss_fn: torch.nn.Module,\n",
+        "              device: torch.device) -> Tuple[float, float]:\n",
+        "  \"\"\"Tests a PyTorch model for a single epoch.\n",
+        "\n",
+        "  Turns a target PyTorch model to \"eval\" mode and then performs\n",
+        "  a forward pass on a testing dataset.\n",
+        "\n",
+        "  Args:\n",
+        "    model: A PyTorch model to be tested.\n",
+        "    dataloader: A DataLoader instance for the model to be tested on.\n",
+        "    loss_fn: A PyTorch loss function to calculate loss on the test data.\n",
+        "    device: A target device to compute on (e.g. \"cuda\" or \"cpu\").\n",
+        "\n",
+        "  Returns:\n",
+        "    A tuple of testing loss and testing accuracy metrics.\n",
+        "    In the form (test_loss, test_accuracy). For example:\n",
+        "\n",
+        "    (0.0223, 0.8985)\n",
+        "  \"\"\"\n",
+        "  # Put model in eval mode\n",
+        "  model.eval()\n",
+        "\n",
+        "  # Setup test loss and test accuracy values\n",
+        "  test_loss, test_acc = 0, 0\n",
+        "\n",
+        "  # Turn on inference context manager\n",
+        "  with torch.inference_mode():\n",
+        "      # Loop through DataLoader batches\n",
+        "      for batch, (X, y) in enumerate(dataloader):\n",
+        "          # Send data to target device\n",
+        "          X, y = X.to(device), y.to(device)\n",
+        "\n",
+        "          # 1. Forward pass\n",
+        "          test_pred_logits = model(X)\n",
+        "\n",
+        "          # 2. Calculate and accumulate loss\n",
+        "          loss = loss_fn(test_pred_logits, y)\n",
+        "          test_loss += loss.item()\n",
+        "\n",
+        "          # Calculate and accumulate accuracy\n",
+        "          test_pred_labels = test_pred_logits.argmax(dim=1)\n",
+        "          test_acc += ((test_pred_labels == y).sum().item()/len(test_pred_labels))\n",
+        "\n",
+        "  # Adjust metrics to get average loss and accuracy per batch\n",
+        "  test_loss = test_loss / len(dataloader)\n",
+        "  test_acc = test_acc / len(dataloader)\n",
+        "  return test_loss, test_acc\n",
+        "\n",
+        "def train(model: torch.nn.Module,\n",
+        "          train_dataloader: torch.utils.data.DataLoader,\n",
+        "          test_dataloader: torch.utils.data.DataLoader,\n",
+        "          optimizer: torch.optim.Optimizer,\n",
+        "          loss_fn: torch.nn.Module,\n",
+        "          epochs: int,\n",
+        "          device: torch.device) -> Dict[str, List]:\n",
+        "  \"\"\"Trains and tests a PyTorch model.\n",
+        "\n",
+        "  Passes a target PyTorch models through train_step() and test_step()\n",
+        "  functions for a number of epochs, training and testing the model\n",
+        "  in the same epoch loop.\n",
+        "\n",
+        "  Calculates, prints and stores evaluation metrics throughout.\n",
+        "\n",
+        "  Args:\n",
+        "    model: A PyTorch model to be trained and tested.\n",
+        "    train_dataloader: A DataLoader instance for the model to be trained on.\n",
+        "    test_dataloader: A DataLoader instance for the model to be tested on.\n",
+        "    optimizer: A PyTorch optimizer to help minimize the loss function.\n",
+        "    loss_fn: A PyTorch loss function to calculate loss on both datasets.\n",
+        "    epochs: An integer indicating how many epochs to train for.\n",
+        "    device: A target device to compute on (e.g. \"cuda\" or \"cpu\").\n",
+        "\n",
+        "  Returns:\n",
+        "    A dictionary of training and testing loss as well as training and\n",
+        "    testing accuracy metrics. Each metric has a value in a list for\n",
+        "    each epoch.\n",
+        "    In the form: {train_loss: [...],\n",
+        "                  train_acc: [...],\n",
+        "                  test_loss: [...],\n",
+        "                  test_acc: [...]}\n",
+        "    For example if training for epochs=2:\n",
+        "                 {train_loss: [2.0616, 1.0537],\n",
+        "                  train_acc: [0.3945, 0.3945],\n",
+        "                  test_loss: [1.2641, 1.5706],\n",
+        "                  test_acc: [0.3400, 0.2973]}\n",
+        "  \"\"\"\n",
+        "  # Create empty results dictionary\n",
+        "  results = {\"train_loss\": [],\n",
+        "      \"train_acc\": [],\n",
+        "      \"test_loss\": [],\n",
+        "      \"test_acc\": []\n",
+        "  }\n",
+        "\n",
+        "  # Loop through training and testing steps for a number of epochs\n",
+        "  for epoch in tqdm(range(epochs)):\n",
+        "      train_loss, train_acc = train_step(model=model,\n",
+        "                                          dataloader=train_dataloader,\n",
+        "                                          loss_fn=loss_fn,\n",
+        "                                          optimizer=optimizer,\n",
+        "                                          device=device)\n",
+        "      test_loss, test_acc = test_step(model=model,\n",
+        "          dataloader=test_dataloader,\n",
+        "          loss_fn=loss_fn,\n",
+        "          device=device)\n",
+        "\n",
+        "      # Print out what's happening\n",
+        "      print(\n",
+        "          f\"Epoch: {epoch+1} | \"\n",
+        "          f\"train_loss: {train_loss:.4f} | \"\n",
+        "          f\"train_acc: {train_acc:.4f} | \"\n",
+        "          f\"test_loss: {test_loss:.4f} | \"\n",
+        "          f\"test_acc: {test_acc:.4f}\"\n",
+        "      )\n",
+        "\n",
+        "      # Update results dictionary\n",
+        "      results[\"train_loss\"].append(train_loss)\n",
+        "      results[\"train_acc\"].append(train_acc)\n",
+        "      results[\"test_loss\"].append(test_loss)\n",
+        "      results[\"test_acc\"].append(test_acc)\n",
+        "\n",
+        "  # Return the filled results at the end of the epochs\n",
+        "  return results"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L1WXE8Os3-AD",
+        "outputId": "30362a39-8608-42f2-e128-d953f5e9f016"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing going_modular/engine.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from going_modular import engine\n"
+      ],
+      "metadata": {
+        "id": "tdt_kSpA4a8I"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "a7neN7Kd0qC8"
+        "id": "gxCnN3Sv5Pg_"
       },
       "execution_count": null,
       "outputs": []
