--- a/05_PyTorch_Going_Modular.ipynb
+++ b/05_PyTorch_Going_Modular.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcurC6VUztw8wJYBDcRqSB",
+      "authorship_tag": "ABX9TyOlrxz85H1mpCOIQfLL8Nx2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -686,10 +686,86 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 5. Creating a function to save the model (utils.py)"
+      ],
+      "metadata": {
+        "id": "gxCnN3Sv5Pg_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile going_modular/utils.py\n",
+        "\"\"\"\n",
+        "Contains various utility functions for PyTorch model training and saving.\n",
+        "\"\"\"\n",
+        "import torch\n",
+        "from pathlib import Path\n",
+        "\n",
+        "def save_model(model: torch.nn.Module,\n",
+        "               target_dir: str,\n",
+        "               model_name: str):\n",
+        "  \"\"\"Saves a PyTorch model to a target directory.\n",
+        "\n",
+        "  Args:\n",
+        "    model: A target PyTorch model to save.\n",
+        "    target_dir: A directory for saving the model to.\n",
+        "    model_name: A filename for the saved model. Should include\n",
+        "      either \".pth\" or \".pt\" as the file extension.\n",
+        "\n",
+        "  Example usage:\n",
+        "    save_model(model=model_0,\n",
+        "               target_dir=\"models\",\n",
+        "               model_name=\"05_going_modular_tingvgg_model.pth\")\n",
+        "  \"\"\"\n",
+        "  # Create target directory\n",
+        "  target_dir_path = Path(target_dir)\n",
+        "  target_dir_path.mkdir(parents=True,\n",
+        "                        exist_ok=True)\n",
+        "\n",
+        "  # Create model save path\n",
+        "  assert model_name.endswith(\".pth\") or model_name.endswith(\".pt\"), \"model_name should end with '.pt' or '.pth'\"\n",
+        "  model_save_path = target_dir_path / model_name\n",
+        "\n",
+        "  # Save the model state_dict()\n",
+        "  print(f\"[INFO] Saving model to: {model_save_path}\")\n",
+        "  torch.save(obj=model.state_dict(),\n",
+        "             f=model_save_path)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ZROxrJI6ijb",
+        "outputId": "9adc62d4-39f8-4366-a24a-98c0e88301c9"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing going_modular/utils.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6. Train, evaluate and save the model (train.py)"
+      ],
+      "metadata": {
+        "id": "ge_wp3tD6r94"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gxCnN3Sv5Pg_"
+        "id": "50CC9sYq6_JR"
       },
       "execution_count": null,
       "outputs": []
