putting everything into a train.py file and running the training from command line

--- a/05_PyTorch_Going_Modular.ipynb
+++ b/05_PyTorch_Going_Modular.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlrxz85H1mpCOIQfLL8Nx2",
+      "authorship_tag": "ABX9TyOSJ7EegQwK+i/Qmh2oFdGq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -755,7 +755,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6. Train, evaluate and save the model (train.py)"
+        "## 6. Train, evaluate and save the model (train.py)\n",
+        "\n",
+        "Actually we want to replicate the functionality of notebook 4 in one line!\n",
+        "\n",
+        "Note: Since train.py will be inside the directory `going_modular`, we can directly import everything we need (from the other files we wrote)"
       ],
       "metadata": {
         "id": "ge_wp3tD6r94"
@@ -763,9 +767,123 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "%%writefile going_modular/train.py\n",
+        "\"\"\"\n",
+        "Trains a PyTorch image classification model using device-agnostic code.\n",
+        "\"\"\"\n",
+        "\n",
+        "import os\n",
+        "import torch\n",
+        "import data_setup, engine, model_builder, utils\n",
+        "\n",
+        "from torchvision import transforms\n",
+        "\n",
+        "# Setup hyperparameters\n",
+        "NUM_EPOCHS = 5\n",
+        "BATCH_SIZE = 32\n",
+        "HIDDEN_UNITS = 10\n",
+        "LEARNING_RATE = 0.001\n",
+        "\n",
+        "# Setup directories\n",
+        "train_dir = \"data/pizza_steak_sushi/train\"\n",
+        "test_dir = \"data/pizza_steak_sushi/test\"\n",
+        "\n",
+        "# Setup target device\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "\n",
+        "# Create transforms\n",
+        "data_transform = transforms.Compose([\n",
+        "  transforms.Resize((64, 64)),\n",
+        "  transforms.ToTensor()\n",
+        "])\n",
+        "\n",
+        "# Create DataLoaders with help from data_setup.py\n",
+        "train_dataloader, test_dataloader, class_names = data_setup.create_dataloaders(\n",
+        "    train_dir=train_dir,\n",
+        "    test_dir=test_dir,\n",
+        "    transform=data_transform,\n",
+        "    batch_size=BATCH_SIZE\n",
+        ")\n",
+        "\n",
+        "# Create model with help from model_builder.py\n",
+        "model = model_builder.TinyVGG(\n",
+        "    input_shape=3,\n",
+        "    hidden_units=HIDDEN_UNITS,\n",
+        "    output_shape=len(class_names)\n",
+        ").to(device)\n",
+        "\n",
+        "# Set loss and optimizer\n",
+        "loss_fn = torch.nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.Adam(model.parameters(),\n",
+        "                             lr=LEARNING_RATE)\n",
+        "\n",
+        "# Start training with help from engine.py\n",
+        "engine.train(model=model,\n",
+        "             train_dataloader=train_dataloader,\n",
+        "             test_dataloader=test_dataloader,\n",
+        "             loss_fn=loss_fn,\n",
+        "             optimizer=optimizer,\n",
+        "             epochs=NUM_EPOCHS,\n",
+        "             device=device)\n",
+        "\n",
+        "# Save the model with help from utils.py\n",
+        "utils.save_model(model=model,\n",
+        "                 target_dir=\"models\",\n",
+        "                 model_name=\"05_going_modular_script_mode_tinyvgg_model.pth\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "50CC9sYq6_JR",
+        "outputId": "bbd8676f-7428-402e-878c-06de0da1e4e7"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing going_modular/train.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python going_modular/train.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B8iQHueF7uDi",
+        "outputId": "4ea9123a-26ed-4e06-f8fc-6fd6ffca7b07"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  0% 0/5 [00:00<?, ?it/s]Epoch: 1 | train_loss: 1.1007 | train_acc: 0.2656 | test_loss: 1.1140 | test_acc: 0.2604\n",
+            " 20% 1/5 [00:03<00:13,  3.36s/it]Epoch: 2 | train_loss: 1.1031 | train_acc: 0.3164 | test_loss: 1.1169 | test_acc: 0.2604\n",
+            " 40% 2/5 [00:05<00:08,  2.75s/it]Epoch: 3 | train_loss: 1.1038 | train_acc: 0.3047 | test_loss: 1.1145 | test_acc: 0.2604\n",
+            " 60% 3/5 [00:07<00:04,  2.29s/it]Epoch: 4 | train_loss: 1.0972 | train_acc: 0.3047 | test_loss: 1.1005 | test_acc: 0.2604\n",
+            " 80% 4/5 [00:09<00:02,  2.11s/it]Epoch: 5 | train_loss: 1.0869 | train_acc: 0.3047 | test_loss: 1.0821 | test_acc: 0.2604\n",
+            "100% 5/5 [00:10<00:00,  2.20s/it]\n",
+            "[INFO] Saving model to: models/05_going_modular_script_mode_tinyvgg_model.pth\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "50CC9sYq6_JR"
+        "id": "tTi_6gUU8JNx"
       },
       "execution_count": null,
       "outputs": []
