Turning data into dataloaders with manual transforms

--- a/06_PyTorch_Transfer_Learning.ipynb
+++ b/06_PyTorch_Transfer_Learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMUm61aFHmpIvwAW5Y0okSj",
+      "authorship_tag": "ABX9TyMnlSOTjpGYSCNx1zGTmmRf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -290,10 +290,105 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Create Datasets and DataLoaders\n",
+        "\n",
+        "Now that we have the data, we can create DataLoaders.\n",
+        "We will use `data_setup.py`\n",
+        "\n",
+        "Note: We need t think about **transforms** before loading.\n",
+        "\n",
+        "There are two ways of doing that:\n",
+        "\n",
+        "1. Manually created transforms - you define what transforms you want your data to go through.\n",
+        "2. Automatically created transforms - the transforms for your data are defined by the model you will use.\n",
+        "\n",
+        "Important: When using a pretrained model, it is impotant that the data that you pass to it are transformed in the same way that the data the model was trained on."
+      ],
+      "metadata": {
+        "id": "9YqOy22jDGdC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from going_modular.going_modular import data_setup"
+      ],
+      "metadata": {
+        "id": "2CfJ_0CaDs3k"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2.1 Creating a transform for `torchvision.models` (manual creation)\n",
+        "\n",
+        "`torchvision.models` contais pretrained models."
+      ],
+      "metadata": {
+        "id": "_gnllVdsEvg9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torchvision import transforms\n",
+        "normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+        "                                 std=[0,229,0,224,0,225])\n",
+        "\n",
+        "manual_transforms = transforms.Compose([\n",
+        "                                      transforms.Resize((224,224)), # resize image into 224 * 224\n",
+        "                                      transforms.ToTensor(), # get images into range[0,1]\n",
+        "                                      normalize]) # make sure images have the same distribution as ImageNet"
+      ],
+      "metadata": {
+        "id": "EVQL1EDoFIfl"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from going_modular.going_modular import data_setup\n",
+        "train_dataloader, test_dataloader, class_names = data_setup.create_dataloaders(train_dir = train_dir,\n",
+        "                                                                               test_dir = test_dir,\n",
+        "                                                                               batch_size = 32,\n",
+        "                                                                               transform = manual_transforms\n",
+        "                                                                               )\n",
+        "train_dataloader, test_dataloader, class_names"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w8ZNsVxbG01p",
+        "outputId": "71a66c2b-9352-42ce-bc75-64a6d5b12f56"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<torch.utils.data.dataloader.DataLoader at 0x7fe66590eb90>,\n",
+              " <torch.utils.data.dataloader.DataLoader at 0x7fe66590e0e0>,\n",
+              " ['pizza', 'steak', 'sushi'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "9YqOy22jDGdC"
+        "id": "JISDX8H2HS_r"
       },
       "execution_count": null,
       "outputs": []
