Create dataloders using the automatic transforms

--- a/06_PyTorch_Transfer_Learning.ipynb
+++ b/06_PyTorch_Transfer_Learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMnlSOTjpGYSCNx1zGTmmRf",
+      "authorship_tag": "ABX9TyPiiGj+FLD8lohGF1CJP3ZP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -385,10 +385,117 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.2 Creating a transform for `torchvision.models` (auto creation)\n",
+        "\n",
+        "As of `torchvision` latest versions, there is support for automatic data transform creation based on the pretrained model you are using."
+      ],
+      "metadata": {
+        "id": "JISDX8H2HS_r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get a set of pretrained model weights\n",
+        "weights = torchvision.models.EfficientNet_B0_Weights.DEFAULT # DEFAULT = best available weights\n",
+        "weights"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rmD_7d4xJruO",
+        "outputId": "1c1e282b-b8e7-41fb-aaf8-6409e1a86f6a"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "EfficientNet_B0_Weights.IMAGENET1K_V1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the transforms used to create our pretrained wwights\n",
+        "auto_transforms = weights.transforms()\n",
+        "auto_transforms"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ksL9oBq6KB-b",
+        "outputId": "98fe0e1a-ada2-4366-afd2-943a67d3e1d5"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ImageClassification(\n",
+              "    crop_size=[224]\n",
+              "    resize_size=[256]\n",
+              "    mean=[0.485, 0.456, 0.406]\n",
+              "    std=[0.229, 0.224, 0.225]\n",
+              "    interpolation=InterpolationMode.BICUBIC\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create dataloders using the automatic transforms\n",
+        "train_dataloader, test_dataloader, class_names = data_setup.create_dataloaders(train_dir = train_dir,\n",
+        "                                                                               test_dir = test_dir,\n",
+        "                                                                               batch_size = 32,\n",
+        "                                                                               transform = auto_transforms\n",
+        "                                                                               )\n",
+        "train_dataloader, test_dataloader, class_names"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UNSK28_jKKnp",
+        "outputId": "259e7b99-2f2f-4df0-eada-dbaa3e737f80"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<torch.utils.data.dataloader.DataLoader at 0x7fe66f3f3c40>,\n",
+              " <torch.utils.data.dataloader.DataLoader at 0x7fe66f3f2fb0>,\n",
+              " ['pizza', 'steak', 'sushi'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "JISDX8H2HS_r"
+        "id": "KZzwlW_GKnvl"
       },
       "execution_count": null,
       "outputs": []
