Breaking Down Figure 1 of the ViT Paper

--- a/08_paper_replicating_ViT.ipynb
+++ b/08_paper_replicating_ViT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMs1sLvTAwtnTM+4MzbR7Q5",
+      "authorship_tag": "ABX9TyOJ3a+7gUnFwb+y2NDLRX5P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -396,10 +396,55 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 3. Replicating ViT: Overview\n",
+        "\n",
+        "Looking at a whole ML research aper can be intimidating.\n",
+        "\n",
+        "So in order to make it more understatable, we break it down into smaller pieces.\n",
+        "\n",
+        "* **Inputs** - What goes into the model (in our case, image tensors (batches))\n",
+        "* **Outputs** - What come out of the model/layer/block ? (in our case: Classification labels)\n",
+        "* **Layers** - Takes an input, manipulates it with a function (e.g self-attention)\n",
+        "* **Block** - A collection of layers\n",
+        "* **Model** - A collection of blocks"
+      ],
+      "metadata": {
+        "id": "khKFu6sQpVlq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.1 ViT overview: \"gathering the pieces\"\n",
+        "\n",
+        "* Figure 1: Visual overview of the architecture\n",
+        "* 4 equations: Math equations that define the functions of each layer/block\n",
+        "* Table 1: different hyperparameters for the architecture/training.\n",
+        "* Text\n",
+        "\n",
+        "#### Figure 1\n",
+        "![picture](https://drive.google.com/file/d/1g03SePH4WFA6D5x5qVRX8GXJm853wM8U/view?usp=drive_link)\n",
+        "\n",
+        "* Embedding = learning representation (random in the beggining and imporve over time)\n",
+        "\n",
+        "#### 4 Equations\n",
+        "![picture](/content/vit_equations.png)\n",
+        "\n",
+        "#### Table 1\n",
+        "![picture](/content/vit_figure.png)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "NKzwhXrnt8Mv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "khKFu6sQpVlq"
+        "id": "FM-PObKTwZX5"
       },
       "execution_count": null,
       "outputs": []
