Creating the Patch Embedding Layer

--- a/08_paper_replicating_ViT.ipynb
+++ b/08_paper_replicating_ViT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOQVXl9XpDQzl6EmzW/rU/I",
+      "authorship_tag": "ABX9TyM4xkAg8U0IMWz1Edf5OjC0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1157,10 +1157,102 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 4.5 Turning the ViT patch embedding layer into a PyTorch module\n",
+        "\n",
+        "We want this module to:\n",
+        "1. Create a class called `PatchEmbedding`\n",
+        "2. Initialize with appropriate hyperparameters, such as channels, embedding dimension, patch size.\n",
+        "3. Create a layer to turn an image into embedded patches using `nn.Conv2d()`\n",
+        "4. Create a layer to flatten the feature maps of the output of the layer in 3\n",
+        "5. Define a `forward()` that defines the forward computation\n",
+        "6. Make sure the output shape of the layer reflects the required output shape of the patch embedding."
+      ],
+      "metadata": {
+        "id": "8VjF5Kt2avi0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. Create a class PatchEmbedding\n",
+        "class PatchEmbedding(nn.Module):\n",
+        "  # 2. Initialize the layer with appropriate hyperparameters\n",
+        "  def __init__(self,\n",
+        "               in_channels:int = 3,\n",
+        "               patch_size:int = 16,\n",
+        "               embedding_dim:int = 768): # from Table 1 for vit base\n",
+        "    super().__init__()\n",
+        "\n",
+        "    # 3. Create a layer to turn an image into embedded patches\n",
+        "    self.patcher = nn.Conv2d(in_channels = in_channels,\n",
+        "                             out_channels=embedding_dim,\n",
+        "                             kernel_size = patch_size,\n",
+        "                             stride = patch_size,\n",
+        "                             padding = 0)\n",
+        "    # 4. Create a layer to flatten feature maps outputs of Conv2d\n",
+        "    self.flatten = nn.Flatten(start_dim=2,\n",
+        "                              end_dim=-1) #the last dimension\n",
+        "\n",
+        "  # 5. Define a forward method to define the forward computation steps\n",
+        "  def forward(self,x):\n",
+        "    # Create assertion to check that inputs are the correct shape\n",
+        "    image_resolution = x.shape[-1]\n",
+        "    assert image_resolution % patch_size == 0, f'Input image size must be divisible by patch size, image shape: {image_resolution}, patch size: {patch_size}'\n",
+        "\n",
+        "    # Perform the forward pass\n",
+        "    x_patched = self.patcher(x)\n",
+        "    x_flattened = self.flatten(x_patched)\n",
+        "\n",
+        "    # 6. Make sure the returned sequence embedding dimensions are in the right order\n",
+        "    return x_flattened.permute(0,2,1)\n"
+      ],
+      "metadata": {
+        "id": "a8V8GJHnc8vS"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "set_seeds()\n",
+        "\n",
+        "# Create an instance of patch embedding layer\n",
+        "patchify = PatchEmbedding(in_channels=3,\n",
+        "                          patch_size=16,\n",
+        "                          embedding_dim =768)\n",
+        "\n",
+        "# Pass a single image through patch embedding layer\n",
+        "print(f'Input Image size: {image.unsqueeze(0).shape}')\n",
+        "patch_embedded_image = patchify(image.unsqueeze(0)) # add an extra  batch dim\n",
+        "print(f'Output patch embedding sequence shape: {patch_embedded_image.shape}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ygdzBg-4enfv",
+        "outputId": "2a8ced58-0c27-4145-8b10-b000d6b1a7b9"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Input Image size: torch.Size([1, 3, 224, 224])\n",
+            "Output patch embedding sequence shape: torch.Size([1, 196, 768])\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8VjF5Kt2avi0"
+        "id": "UtIxWt6ffOO7"
       },
       "execution_count": null,
       "outputs": []
